# hass-timetree-integration

./: .gitignore  API_DOCUMENTATION.md  hacs.json
.claude/: settings.local.json
custom_components/timetree/: __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  strings.json
custom_components/timetree/timetree_api/: __init__.py  _auth.py  _client.py  _throttle.py  const.py  models.py
tests/: conftest.py  test_calendar_helpers.py
timetree-api/: pyproject.toml
timetree-api/src/timetree_api/: _client.py  _serialization.py  exceptions.py
