[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetree-api"
version = "0.1.0"
description = "Async Python client for the TimeTree calendar API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Philipp Seemann" }]
keywords = ["timetree", "calendar", "api", "async", "aiohttp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["aiohttp>=3.9,<4"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/philippseemann/timetree-api"
Issues = "https://github.com/philippseemann/timetree-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/timetree_api"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
